--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
-    <title>1st MBZUAI Machine Learning for Large Models Workshop 2024</title>
+    <title>International Symposium on Trustworthy Foundation Models</title>
 </head>
 
 <body>
 
     <div class="banner">
-        <img src="./MLLM2024_files/banner.jpeg" alt="MBZUAI Machine Learning for Large Models 2024 Banner">
+        <img src="./MLLM2024_files/banner.jpeg" alt="Banner" style="width: 100%; height: auto;">
         <div class="top-left">
-            <span class="title2">1st MBZUAI Workshop on</span>
-            <br><br> <span class="title1">Machine Learning for Large Models</span> 
+            <span class="title2">International Symposium on</span>
+            <br><br> <span class="title1">Trustworthy Foundation Models</span> 
             <!-- <br><br>
             <span class="year">Empowering Sustainable Futures</span> -->
         </div>
-        <div class="bottom-right">
-            June 3-4, 2024 <br> MBZUAI, Abu Dhabi
+        <div class="bottom-right", style="font-size: 30px;">
+            May 26-27, 2025 <br> MBZUAI, Abu Dhabi
         </div>
     </div>
 
