--- a/index.html
+++ b/index.html
@@ -49,23 +49,31 @@
 
     <h2>Workshop Goals</h2>
     <p>
-        We are delighted to announce the 1st MBZUAI Workshop on Machine Learning for Large Models. This is organized by the Machine Learning department of <a href="https://mbzuai.ac.ae/"><b>MBZUAI</b></a>  and aims to delve into machine learning in the era of large models. This workshop aims to foster collaboration and accelerate progress in the ML aspects of LLM research. We will bring together leading experts to discuss cutting-edge techniques, share research findings, and identify key challenges and opportunities.
+        <!-- We are delighted to announce the 1st MBZUAI Workshop on Machine Learning for Large Models. This is organized by the Machine Learning department of <a href="https://mbzuai.ac.ae/"><b>MBZUAI</b></a>  and aims to delve into machine learning in the era of large models. This workshop aims to foster collaboration and accelerate progress in the ML aspects of LLM research. We will bring together leading experts to discuss cutting-edge techniques, share research findings, and identify key challenges and opportunities.-->
+        As foundation models become increasingly integrated into critical applications, ensuring their trustworthiness is paramount. The <strong>International Symposium on Trustworthy Foundation Models</strong> brings together researchers, industry leaders, and policymakers to discuss key challenges and advancements in building safe, fair, and robust AI systems. This symposium will explore topics such as model safety, privacy, fairness, interpretability, causality, and robustness, with a particular emphasis on real-world deployment and governance. Through two days of invited talks, networking discussions, and contributed research, we aim to foster collaboration and drive innovation in the responsible development of foundation models.
+
     </p> 
 
     <h2>Areas of Focus</h2>
     <p>
-        We invite contributions on topics broadly related to machine learning for large models. Key areas of focus will include:
+        <!--We invite contributions on topics broadly related to machine learning for large models. Key areas of focus will include:-->
+        Specifically, the objectives of the symposium are
     </p>
-    <p>• Development of novel ML architectures for large model training and inference
-    <br>• Addressing bias and fairness in large model training data and output
-    <br>• Techniques for interpretability and explainability of large model behavior
-    <br>• Representation learning for large models
-    <br>• Mitigating risks and ensuring safety in large model development
-    <br>• Scaling and efficiency considerations for large-scale large model training</p> 
+    <!-- <p>• Development of novel ML architectures for large model training and inference -->
+    <!-- <br>• Addressing bias and fairness in large model training data and output -->
+    <!-- <br>• Techniques for interpretability and explainability of large model behavior -->
+    <!-- <br>• Representation learning for large models -->
+    <!-- <br>• Mitigating risks and ensuring safety in large model development -->
+    <!-- <br>• Scaling and efficiency considerations for large-scale large model training -->
+        <p>• Exchanging ideas, e.g., we will invite keynote speeches from world-leading researchers and contributed talks from active researchers;
+        <p>• Building networks and promoting potential collaborations, e.g., promote internal collaborations within MBZUAI and internal collaborations with rising-star and world-leading researchers;
+        <p>• Inspiring the juniors to do better research, e.g., mentor research students and postdocs at MBZUAI to do high-qulity research;
+        <p>• Improving MBUZAI’s profile and attracting rising stars to join us;
+    </p> 
     
     <h2>Schedule</h2>
     <p>
-        We will host two days of invited talks (June 3-4) interspersed with panel discussions on challenges in learning with large models. We will also organize a research night for the students to discuss with speakers.
+        We will host two days of invited talks (May 26-27) interspersed with panel discussions on challenges in learning with large models. We will also organize a research night for the students to discuss with speakers.
     </p>
     <p>
         This will be followed by transfers to the airport for departing flights. 
@@ -75,18 +83,18 @@
     <h2>Organizers</h2>
     <p>
         <b>Organizing committee:</b><br>
-        <a href="https://mbzuai.ac.ae/study/faculty/kun-zhang/">Kun Zhang</a>, MBZUAI<br>
-        <a href="https://mbzuai.ac.ae/study/faculty/michalis-vazirgiannis/">Michalis Vazirgiannis</a>, Ecole Polytechnique/MBZUAI<br>
-        <a href="https://hanzhaoml.github.io/">Han Zhao</a>, UIUC<br>
-        <a href="https://mbzuai.ac.ae/study/faculty/mingming-gong/">Mingming Gong</a>, MBZUAI<br>        
-        <a href="https://mbzuai.ac.ae/study/faculty/zhiqiang-shen/">Zhiqiang Shen</a>, MBZUAI<br>
-        <a href="https://mbzuai.ac.ae/study/faculty/professor-eric-moulines/">Eric Moulines</a>, Ecole Polytechnique/MBZUAI<br>
+        General chair: <a href="https://mbzuai.ac.ae/study/faculty/kun-zhang/">Kun Zhang</a>, MBZUAI<br>
+        Program chair: <a href="https://mbzuai.ac.ae/study/faculty/tongliang-liu/">Tongliang Liu</a>, USYD/MBZUAI; Bo Li, UIUC<br> 
+        Invited faculty talk session chair: Nils Lukas, Bo Han  <br>
+        Rising-star presentation session chair: Salem Lahlou <br>
+        PhD mentoring session chair: <a href="https://mbzuai.ac.ae/study/faculty/mingming-gong/">Mingming Gong</a>, UoM/MBZUAI <br>
+        Local arrangement chair: Runqi Lin, USYD/MBZUAI <br>     
     </p>
-    <p>
+     <!--  <p>
         <b>Local hosts:</b><br>
         <a href="mailto:%20maria.pereira@mbzuai.ac.ae">Maria Pereira</a>, MBZUAI<br>
         <a href="mailto:%20philip.purnell@mbzuai.ac.ae">Philip Purnell</a>, MBZUAI<br>
-    </p>
+    </p> -->
     <!-- <table class="sponsors">
         <tr>
             <td class="sponsor">
