--- a/day1.html
+++ b/day1.html
@@ -14,7 +14,7 @@
 <body>
 
     <div class="banner">
-        <img src="./MLLM2024_day1_files/banner.jpeg" alt="MBZUAI Machine Learning for Large Models 2024 Banner">
+        <img src="./MLLM2024_day1_files/banner.jpeg" alt="Banner">
         <div class="top-left">
             <span class="title2">International Symposium on</span>
             <br><br> <span class="title1">Trustworthy Foundation Models</span> 
