--- a/speakerlist.html
+++ b/speakerlist.html
@@ -8,7 +8,7 @@
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
-    <title>1st MBZUAI Machine Learning for Large Models Workshop 2024</title>
+    <title>International Symposium on Trustworthy Foundation Models</title>
 </head>
 
 <body>
