--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
     <p>
         <b>Organizing committee:</b><br>
         General chair: <a href="https://mbzuai.ac.ae/study/faculty/kun-zhang/">Kun Zhang</a>, MBZUAI<br>
-        Program chair: <a href="https://mbzuai.ac.ae/study/faculty/tongliang-liu/">Tongliang Liu</a>, USYD/MBZUAI; Bo Li, UIUC<br> 
-        Invited faculty talk session chair: Nils Lukas, Bo Han  <br>
-        Rising-star presentation session chair: Salem Lahlou <br>
-        PhD mentoring session chair: <a href="https://mbzuai.ac.ae/study/faculty/mingming-gong/">Mingming Gong</a>, UoM/MBZUAI <br>
-        Local arrangement chair: Runqi Lin, USYD/MBZUAI <br>     
+        Program chair: <a href="https://mbzuai.ac.ae/study/faculty/tongliang-liu/">Tongliang Liu</a>, MBZUAI/USYD; <a href="https://aisecure.github.io/">Bo Li</a>, UIUC<br> 
+        Invited faculty talk session chair: <a href="https://mbzuai.ac.ae/study/faculty/nils-lukas/">Nils Lukas</a>, MBZUAI; <a href="https://bhanml.github.io">Bo Han</a>, HKBU/RIKEN<br>
+        Rising-star presentation session chair: <a href="https://mbzuai.ac.ae/study/faculty/salem-lahlou/">Salem Lahlou</a>, MBZUAI <br>
+        PhD mentoring session chair: <a href="https://mbzuai.ac.ae/study/faculty/mingming-gong/">Mingming Gong</a>, MBZUAI/UoM <br>
+        Local arrangement chair: <a href="https://runqilin.github.io">Runqi Lin</a>, MBZUAI/USYD <br>     
     </p>
      <!--  <p>
         <b>Local hosts:</b><br>
