--- a/day1.html
+++ b/day1.html
@@ -61,7 +61,7 @@
         </tr>
         <tr>
             <td class="speaker">
-                <a href="https://mbzuai.ac.ae/study/faculty/professor-eric-xing/"><b>Eric Xing</b></a> (MBZUAI)
+                <a href="https://mbzuai.ac.ae/study/faculty/professor-eric-xing/"><b>Eric Xing</b></a>, (MBZUAI)
             </td>
         </tr>
     </tbody></table>
