--- a/day2.html
+++ b/day2.html
@@ -48,13 +48,13 @@
    
     <h2>Day 2 Program (May 27, Tue, XXXX Hall)</h2>
 
-    <table id="Keynote 1">
+    <table id="Keynote 2">
         <tbody><tr>
             <td class="date" rowspan="3">
                 9:00 am
             </td>
             <td class="title">
-                Keynote 1
+                Keynote 2
             </td>
         </tr>
         <tr>
@@ -84,13 +84,13 @@
         </tr>
     </tbody></table>
     
-     <table id="Contributed talk 1">
+     <table id="Contributed talk 4">
         <tbody><tr>
             <td class="date" rowspan="3">
                 11:00 am
             </td>
             <td class="title">
-                Contributed talk 1
+                Contributed talk 4
             </td>
         </tr>
         <tr>
@@ -104,13 +104,13 @@
         </td></tr>
     </tbody></table>
 
-    <table id="Contributed talk 2">
+    <table id="Contributed talk 5">
         <tbody><tr>
             <td class="date" rowspan="3">
                 11:30 am
             </td>
             <td class="title">
-                Contributed talk 2
+                Contributed talk 5
             </td>
         </tr>
         <tr>
@@ -124,13 +124,13 @@
         </td></tr>
     </tbody></table>
     
-     <table id="Contributed talk 3">
+     <table id="Contributed talk 6">
         <tbody><tr>
             <td class="date" rowspan="3">
                 12:00 am
             </td>
             <td class="title">
-                Contributed talk 3
+                Contributed talk 6
             </td>
         </tr>
         <tr>
@@ -160,13 +160,13 @@
         </tr>
     </tbody></table>
 
-     <table id="Invited paper presentation  1">
+     <table id="Invited paper presentation  4">
         <tbody><tr>
             <td class="date" rowspan="3">
                 1:30 pm
             </td>
             <td class="title">
-                Invited paper presentation  1
+                Invited paper presentation  4
             </td>
         </tr>
         <tr>
@@ -180,13 +180,13 @@
         </td></tr>
     </tbody></table>
 
-    <table id="Invited paper presentation  2">
+    <table id="Invited paper presentation  5">
         <tbody><tr>
             <td class="date" rowspan="3">
                 2:00 pm
             </td>
             <td class="title">
-                Invited paper presentation 2
+                Invited paper presentation 5
             </td>
         </tr>
         <tr>
@@ -200,13 +200,13 @@
         </td></tr>
     </tbody></table>
 
-    <table id="Invited paper presentation  3">
+    <table id="Invited paper presentation  6">
         <tbody><tr>
             <td class="date" rowspan="3">
                 3:00 pm
             </td>
             <td class="title">
-                Invited paper presentation 3
+                Invited paper presentation 6
             </td>
         </tr>
         <tr>
@@ -220,13 +220,13 @@
         </td></tr>
     </tbody></table>
 
-        <table id="Student presentation and mentoring 1">
+        <table id="Student presentation and mentoring 5">
         <tbody><tr>
             <td class="date" rowspan="3">
                 4:00 pm
             </td>
             <td class="title">
-                Student presentation and mentoring 1
+                Student presentation and mentoring 5
             </td>
         </tr>
         <tr>
@@ -240,13 +240,13 @@
         </td></tr>
     </tbody></table>
 
-            <table id="Student presentation and mentoring 2">
+            <table id="Student presentation and mentoring 6">
         <tbody><tr>
             <td class="date" rowspan="3">
                 4:30 pm
             </td>
             <td class="title">
-                Student presentation and mentoring 2
+                Student presentation and mentoring 6
             </td>
         </tr>
         <tr>
@@ -261,13 +261,13 @@
     </tbody></table>
 
 
-        <table id="Student presentation and mentoring 3">
+        <table id="Student presentation and mentoring 7">
         <tbody><tr>
             <td class="date" rowspan="3">
                 5:00 pm
             </td>
             <td class="title">
-                Student presentation and mentoring 3
+                Student presentation and mentoring 7
             </td>
         </tr>
         <tr>
@@ -282,13 +282,13 @@
     </tbody></table>
 
 
-    <table id="Student presentation and mentoring 4">
+    <table id="Student presentation and mentoring 8">
         <tbody><tr>
             <td class="date" rowspan="3">
                 5:30 pm
             </td>
             <td class="title">
-                Student presentation and mentoring 4
+                Student presentation and mentoring 8
             </td>
         </tr>
         <tr>
@@ -306,10 +306,10 @@
     <table id="Closing remarks">
         <tbody><tr class="speaker">
             <td class="date" rowspan="3">
-                9:00 am
+                6:00 pm
             </td>
             <td class="title-special">
-                Opening remarks
+                Closing remarks
             </td>
         </tr>
         <tr>
