--- a/day2.html
+++ b/day2.html
@@ -59,12 +59,12 @@
         </tr>
         <tr>
             <td class="speaker">
-                <a href="http://web.cs.ucla.edu/~qgu/"><b>XXX XX</b></a>, (XXXX)
+                <a href=""><b>TBD</b></a>, (TBD)
             </td>
         </tr>
         <tr>
             <td class="abstract">
-                abstract
+                TBD
         </td></tr>
     </tbody></table>
     
@@ -95,12 +95,12 @@
         </tr>
         <tr>
             <td class="speaker">
-                <a href="http://web.cs.ucla.edu/~qgu/"><b>XXX XX</b></a>, (XXXX)
+                <a href=""><b>TBD</b></a>, (TBD)
             </td>
         </tr>
         <tr>
             <td class="abstract">
-                abstract
+                TBD
         </td></tr>
     </tbody></table>
 
@@ -115,12 +115,12 @@
         </tr>
         <tr>
             <td class="speaker">
-                <a href="http://web.cs.ucla.edu/~qgu/"><b>XXX XX</b></a>, (XXXX)
+                <a href=""><b>TBD</b></a>, (TBD)
             </td>
         </tr>
         <tr>
             <td class="abstract">
-                abstract
+                TBD
         </td></tr>
     </tbody></table>
     
@@ -135,12 +135,12 @@
         </tr>
         <tr>
             <td class="speaker">
-                <a href="http://web.cs.ucla.edu/~qgu/"><b>XXX XX</b></a>, (XXXX)
+                <a href=""><b>TBD</b></a>, (TBD)
             </td>
         </tr>
         <tr>
             <td class="abstract">
-                abstract
+                TBD
         </td></tr>
     </tbody></table>
 
@@ -171,12 +171,12 @@
         </tr>
         <tr>
             <td class="speaker">
-                <a href="http://web.cs.ucla.edu/~qgu/"><b>XXX XX</b></a>, (XXXX)
+                <a href=""><b>TBD</b></a>, (TBD)
             </td>
         </tr>
         <tr>
             <td class="abstract">
-                abstract
+                TBD
         </td></tr>
     </tbody></table>
 
@@ -191,12 +191,12 @@
         </tr>
         <tr>
             <td class="speaker">
-                <a href="http://web.cs.ucla.edu/~qgu/"><b>XXX XX</b></a>, (XXXX)
+                <a href=""><b>TBD</b></a>, (TBD)
             </td>
         </tr>
         <tr>
             <td class="abstract">
-                abstract
+                TBD
         </td></tr>
     </tbody></table>
 
@@ -211,12 +211,12 @@
         </tr>
         <tr>
             <td class="speaker">
-                <a href="http://web.cs.ucla.edu/~qgu/"><b>XXX XX</b></a>, (XXXX)
+                <a href=""><b>TBD</b></a>, (TBD)
             </td>
         </tr>
         <tr>
             <td class="abstract">
-                abstract
+                TBD
         </td></tr>
     </tbody></table>
 
@@ -231,12 +231,12 @@
         </tr>
         <tr>
             <td class="speaker">
-                <a href="http://web.cs.ucla.edu/~qgu/"><b>XXX XX</b></a>, (XXXX)
+                <a href=""><b>TBD</b></a>, (TBD)
             </td>
         </tr>
         <tr>
             <td class="abstract">
-                abstract
+                TBD
         </td></tr>
     </tbody></table>
 
@@ -251,12 +251,12 @@
         </tr>
         <tr>
             <td class="speaker">
-                <a href="http://web.cs.ucla.edu/~qgu/"><b>XXX XX</b></a>, (XXXX)
+                <a href=""><b>TBD</b></a>, (TBD)
             </td>
         </tr>
         <tr>
             <td class="abstract">
-                abstract
+                TBD
         </td></tr>
     </tbody></table>
 
@@ -272,12 +272,12 @@
         </tr>
         <tr>
             <td class="speaker">
-                <a href="http://web.cs.ucla.edu/~qgu/"><b>XXX XX</b></a>, (XXXX)
+                <a href=""><b>TBD</b></a>, (TBD)
             </td>
         </tr>
         <tr>
             <td class="abstract">
-                abstract
+                TBD
         </td></tr>
     </tbody></table>
 
@@ -293,12 +293,12 @@
         </tr>
         <tr>
             <td class="speaker">
-                <a href="http://web.cs.ucla.edu/~qgu/"><b>XXX XX</b></a>, (XXXX)
+                <a href=""><b>TBD</b></a>, (TBD)
             </td>
         </tr>
         <tr>
             <td class="abstract">
-                abstract
+                TBD
         </td></tr>
     </tbody></table>
 
