--- a/day2.html
+++ b/day2.html
@@ -47,7 +47,8 @@
     </tbody></table>
    
     <h2>Day 2 Program (May 27, Tue, XXXX Hall)</h2>
-
+    To be announced.
+<!--
     <table id="Keynote 2">
         <tbody><tr>
             <td class="date" rowspan="3">
@@ -318,5 +319,6 @@
             </td>
         </tr>
     </tbody></table>
-
+-->
+    
 </body></html>
