--- a/day1.html
+++ b/day1.html
@@ -49,7 +49,8 @@
    
 
     <h2>Day 1 Program (May 26, Mon, XXXX Hall)</h2>
-
+    To be announced.
+<!--
     <table id="Opening remarks">
         <tbody><tr class="speaker">
             <td class="date" rowspan="3">
@@ -97,7 +98,6 @@
         </tr>
         <tr>
             <td class="abstract">
-                <!-- Kept for Spacing -->
             </td>
         </tr>
     </tbody></table>
@@ -173,7 +173,7 @@
         </tr>
         <tr>
             <td class="abstract">
-                <!-- Kept for Spacing -->
+               
             </td>
         </tr>
     </tbody></table>
@@ -319,5 +319,5 @@
                 TBD
         </td></tr>
     </tbody></table>
-    
+-->
 </body></html>
