--- a/speakerlist.html
+++ b/speakerlist.html
@@ -62,19 +62,24 @@
 
             <tr class="speaker">
                 <td class="speaker"><img src="./MLLM2024_speakerlist_files/Chaowei_Xiao.jpeg" alt="Speaker 2" class="dispic"></td>
-                <td class="speaker"><a href="https://xiaocw11.github.io">Chaowei Xiao</a></td>
+                <td class="speaker"><a href="https://xiaocw11.github.io">Chaowei Xiao</a> (University of Wisconsin, Madison)</td>
             </tr>
             <tr class="speaker">
                 <td class="speaker"><img src="./MLLM2024_speakerlist_files/Nouha_Dziri.jpeg" alt="Speaker 2" class="dispic"></td>
-                <td class="speaker"><a href="https://scholar.google.com/citations?user=IqcCDXkAAAAJ&hl=en">Nouha Dziri</a></td>
+                <td class="speaker"><a href="https://nouhadziri.github.io">Nouha Dziri</a> (Allen Institute for AI)</td>
             </tr>
             <tr class="speaker">
                 <td class="speaker"><img src="./MLLM2024_speakerlist_files/Takashi_Ishida.jpeg" alt="Speaker 2" class="dispic"></td>
-                <td class="speaker"><a href="https://takashiishida.github.io">Takashi Ishida</a></td>
+                <td class="speaker"><a href="https://takashiishida.github.io">Takashi Ishida</a> (RIKEN AIP / The University of Tokyo)</td>
             </tr>
             <tr class="speaker">
                 <td class="speaker"><img src="./MLLM2024_speakerlist_files/Nils_Lukas.jpeg" alt="Speaker 2" class="dispic"></td>
-                <td class="speaker"><a href="https://mbzuai.ac.ae/study/faculty/nils-lukas/">Nils Lukas</a></td>
+                <td class="speaker"><a href="https://mbzuai.ac.ae/study/faculty/nils-lukas/">Nils Lukas</a> (MBZUAI)</td>
+            </tr>
+
+            <tr class="speaker">
+                <td class="speaker"><img src="./MLLM2024_speakerlist_files/Haolun_Wu.jpeg" alt="Speaker 2" class="dispic"></td>
+                <td class="speaker"><a href="https://haolun-wu.github.io/">Haolun Wu</a> (McGill University / Mila)</td>
             </tr>
 <!--
             <tr class="speaker">
@@ -84,11 +89,11 @@
 -->
             <tr class="speaker">
                 <td class="speaker"><img src="./MLLM2024_speakerlist_files/Minsu_Kim.jpeg" alt="Speaker 2" class="dispic"></td>
-                <td class="speaker"><a href="https://sites.google.com/view/ms-dot-k">Minsu Kim</a></td>
+                <td class="speaker"><a href="https://sites.google.com/view/ms-dot-k">Minsu Kim</a> (Meta)</td>
             </tr>
             <tr class="speaker">
                 <td class="speaker"><img src="./MLLM2024_speakerlist_files/Yongqiang_Chen.jpeg" alt="Speaker 2" class="dispic"></td>
-                <td class="speaker"><a href="https://lfhase.win">Yongqiang Chen</a></td>
+                <td class="speaker"><a href="https://lfhase.win">Yongqiang Chen</a>(MBZUAI / CMU)</td>
             </tr>
 <!--             <tr class="speaker">
                 <td class="speaker"><img src="./MLLM2024_speakerlist_files/Danqi_Chen.jpeg" alt="Speaker 2" class="dispic"></td>
