--- a/speakerlist.html
+++ b/speakerlist.html
@@ -70,13 +70,16 @@
             </tr>
             <tr class="speaker">
                 <td class="speaker"><img src="./MLLM2024_speakerlist_files/Takashi_Ishida.jpeg" alt="Speaker 2" class="dispic"></td>
-                <td class="speaker"><a href="https://takashiishida.github.io">Takashi Ishida</a> (RIKEN AIP / The University of Tokyo)</td>
+                <td class="speaker"><a href="https://takashiishida.github.io">Takashi Ishida</a> (The University of Tokyo)</td>
             </tr>
             <tr class="speaker">
                 <td class="speaker"><img src="./MLLM2024_speakerlist_files/Nils_Lukas.jpeg" alt="Speaker 2" class="dispic"></td>
                 <td class="speaker"><a href="https://mbzuai.ac.ae/study/faculty/nils-lukas/">Nils Lukas</a> (MBZUAI)</td>
             </tr>
-
+            <tr class="speaker">
+                <td class="speaker"><img src="./MLLM2024_speakerlist_files/Sanae_Lotfi.jpeg" alt="Speaker 2" class="dispic"></td>
+                <td class="speaker"><a href="https://sanaelotfi.github.io">Sanae Lotfi</a> (New York University)</td>
+            </tr>
             <tr class="speaker">
                 <td class="speaker"><img src="./MLLM2024_speakerlist_files/Haolun_Wu.jpeg" alt="Speaker 2" class="dispic"></td>
                 <td class="speaker"><a href="https://haolun-wu.github.io/">Haolun Wu</a> (McGill University / Mila)</td>
