--- a/index.html
+++ b/index.html
@@ -83,18 +83,18 @@
     <h2>Organizers</h2>
     <p>
         <b>Organizing committee:</b><br>
-        General chair: <a href="https://mbzuai.ac.ae/study/faculty/kun-zhang/">Kun Zhang</a>, MBZUAI<br>; <a href="https://mbzuai.ac.ae/study/faculty/tongliang-liu/">Tongliang Liu</a>, MBZUAI/USYD
+        General chair: <a href="https://mbzuai.ac.ae/study/faculty/kun-zhang/">Kun Zhang</a>, MBZUAI; <a href="https://mbzuai.ac.ae/study/faculty/tongliang-liu/">Tongliang Liu</a>, MBZUAI/USYD<br>
         Program chair: <a href="https://bhanml.github.io">Bo Han</a>, HKBU/RIKEN; <a href="https://aisecure.github.io/">Bo Li</a>, UIUC<br> 
         Invited faculty talk session chair: <a href="https://mbzuai.ac.ae/study/faculty/nils-lukas/">Nils Lukas</a>, MBZUAI<br>
         Rising-star presentation session chair: <a href="https://mbzuai.ac.ae/study/faculty/salem-lahlou/">Salem Lahlou</a>, MBZUAI <br>
         PhD mentoring session chair: <a href="https://mbzuai.ac.ae/study/faculty/mingming-gong/">Mingming Gong</a>, MBZUAI/UoM <br>
         Local arrangement chair: <a href="https://runqilin.github.io">Runqi Lin</a>, MBZUAI/USYD <br>     
     </p>
-     <!--  <p>
+     <p>
         <b>Local hosts:</b><br>
         <a href="mailto:%20maria.pereira@mbzuai.ac.ae">Maria Pereira</a>, MBZUAI<br>
         <a href="mailto:%20philip.purnell@mbzuai.ac.ae">Philip Purnell</a>, MBZUAI<br>
-    </p> -->
+    </p>
     <!-- <table class="sponsors">
         <tr>
             <td class="sponsor">
