--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
      <p>
         <b>Local hosts:</b><br>
         <a href="mailto:%20maria.pereira@mbzuai.ac.ae">Maria Pereira</a>, MBZUAI<br>
-        <a href="mailto:%20philip.purnell@mbzuai.ac.ae">Philip Purnell</a>, MBZUAI<br>
+        <a href="mailto:%20Analyne.Mata@mbzuai.ac.ae">Analyen Mata</a>, MBZUAI<br>
     </p>
     <!-- <table class="sponsors">
         <tr>
