--- a/day1.html
+++ b/day1.html
@@ -48,7 +48,7 @@
 
    
 
-    <h2>Day 1 Program (May 26, Mon, XXXX Hall)</h2>
+    <h2>Day 1 Program (May 26, Mon)</h2>
     To be announced.
 <!--
     <table id="Opening remarks">
