--- a/day2.html
+++ b/day2.html
@@ -46,7 +46,7 @@
         </tr>
     </tbody></table>
    
-    <h2>Day 2 Program (May 27, Tue, XXXX Hall)</h2>
+    <h2>Day 2 Program (May 27, Tue)</h2>
     To be announced.
 <!--
     <table id="Keynote 2">
