--- a/speakerlist.html
+++ b/speakerlist.html
@@ -81,6 +81,10 @@
                 <td class="speaker"><a href="https://sanaelotfi.github.io">Sanae Lotfi</a> (New York University)</td>
             </tr>
             <tr class="speaker">
+                <td class="speaker"><img src="./MLLM2024_speakerlist_files/Ashwinee_Panda.jpeg" alt="Speaker 2" class="dispic"></td>
+                <td class="speaker"><a href="https://kiddyboots216.github.io">Ashwinee Panda</a> (Princeton University)</td>
+            </tr>
+            <tr class="speaker">
                 <td class="speaker"><img src="./MLLM2024_speakerlist_files/Haolun_Wu.jpeg" alt="Speaker 2" class="dispic"></td>
                 <td class="speaker"><a href="https://haolun-wu.github.io/">Haolun Wu</a> (McGill University / Mila)</td>
             </tr>
