--- a/speakerlist.html
+++ b/speakerlist.html
@@ -59,7 +59,10 @@
                 <td  class="speaker"><img src="../assets/dp/Duchi.jpg" alt="Speaker 2" class="dispic"></td>
                 <td  class="speaker">John Duchi</td>
             </tr> -->
-
+            <tr class="speaker">
+                <td class="speaker"><img src="./MLLM2024_speakerlist_files/Tomas_Mikolov.jpeg" alt="Speaker 2" class="dispic"></td>
+                <td class="speaker"><a href="https://en.wikipedia.org/wiki/Tomáš_Mikolov">Tomas Mikolov</a> (CIIRC CTU)</td>
+            </tr>
             <tr class="speaker">
                 <td class="speaker"><img src="./MLLM2024_speakerlist_files/Chaowei_Xiao.jpeg" alt="Speaker 2" class="dispic"></td>
                 <td class="speaker"><a href="https://xiaocw11.github.io">Chaowei Xiao</a> (University of Wisconsin, Madison)</td>
