--- a/speakerlist.html
+++ b/speakerlist.html
@@ -64,6 +64,14 @@
                 <td class="speaker"><a href="https://en.wikipedia.org/wiki/Tomáš_Mikolov">Tomas Mikolov</a> (CIIRC CTU)</td>
             </tr>
             <tr class="speaker">
+                <td class="speaker"><img src="./MLLM2024_speakerlist_files/Prateek_Jain.jpeg" alt="Speaker 2" class="dispic"></td>
+                <td class="speaker"><a href="http://www.prateekjain.org">Prateek Jain</a> (Google)</td>
+            </tr>
+            <tr class="speaker">
+                <td class="speaker"><img src="./MLLM2024_speakerlist_files/Karthik_Nandakumar.jpeg" alt="Speaker 2" class="dispic"></td>
+                <td class="speaker"><a href="https://www.cse.msu.edu/~nandakum/">Karthik Nandakumar</a> (Michigan State University / MBZUAI)</td>
+            </tr>
+            <tr class="speaker">
                 <td class="speaker"><img src="./MLLM2024_speakerlist_files/Chaowei_Xiao.jpeg" alt="Speaker 2" class="dispic"></td>
                 <td class="speaker"><a href="https://xiaocw11.github.io">Chaowei Xiao</a> (University of Wisconsin, Madison)</td>
             </tr>
