--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <h2>Areas of Focus</h2>
 -->
     <p>
-        Specifically, the objectives of the symposium are
+        Specifically, the objectives of the symposium are:
     </p> 
         <p>• Exchanging ideas, e.g., we will invite keynote speeches from world-leading researchers and contributed talks from active researchers;
         <p>• Building networks and promoting potential collaborations, e.g., promote internal collaborations within MBZUAI and internal collaborations with rising-star and world-leading researchers;
