--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
     </p> 
         <p>• Exchanging ideas, e.g., we will invite keynote speeches from world-leading researchers and contributed talks from active researchers;
         <p>• Building networks and promoting potential collaborations, e.g., promote internal collaborations within MBZUAI and internal collaborations with rising-star and world-leading researchers;
-        <p>• Inspiring the juniors to do better research, e.g., mentor research students and postdocs at MBZUAI to do high-qulity research;
-        <p>• Improving MBUZAI’s profile and attracting rising stars to join us;
+        <p>• Inspiring the juniors to do better research, e.g., mentor research students and postdocs at MBZUAI to do high-qulity research.
     </p> 
 
     <h2>Schedule</h2>
