--- a/speakerlist.html
+++ b/speakerlist.html
@@ -88,6 +88,10 @@
                 <td class="speaker"><a href="https://mbzuai.ac.ae/study/faculty/nils-lukas/">Nils Lukas</a> (MBZUAI)</td>
             </tr>
             <tr class="speaker">
+                <td class="speaker"><img src="./MLLM2024_speakerlist_files/Fajri_Koto.jpeg" alt="Speaker 2" class="dispic"></td>
+                <td class="speaker"><a href="https://mbzuai.ac.ae/study/faculty/fajri-koto/">Fajri Koto</a> (MBZUAI)</td>
+            </tr>
+            <tr class="speaker">
                 <td class="speaker"><img src="./MLLM2024_speakerlist_files/Sanae_Lotfi.jpeg" alt="Speaker 2" class="dispic"></td>
                 <td class="speaker"><a href="https://sanaelotfi.github.io">Sanae Lotfi</a> (New York University)</td>
             </tr>
@@ -144,8 +148,5 @@
         </tbody>
     </table>
     
-    To be completed.
-
-
 
 </body></html>
