--- a/speakerlist.html
+++ b/speakerlist.html
@@ -113,6 +113,10 @@
                 <td class="speaker"><img src="./MLLM2024_speakerlist_files/Minsu_Kim.jpeg" alt="Speaker 2" class="dispic"></td>
                 <td class="speaker"><a href="https://sites.google.com/view/ms-dot-k">Minsu Kim</a> (Meta)</td>
             </tr>
+            <tr class="speaker">
+                <td class="speaker"><img src="./MLLM2024_speakerlist_files/Aleksandar_Petrov.jpeg" alt="Speaker 2" class="dispic"></td>
+                <td class="speaker"><a href="https://p-petrov.com">Aleksandar Petrov</a> (University of Oxford )</td>
+            </tr>
 <!--
             <tr class="speaker">
                 <td class="speaker"><img src="./MLLM2024_speakerlist_files/Yongqiang_Chen.jpeg" alt="Speaker 2" class="dispic"></td>
