--- a/speakerlist.html
+++ b/speakerlist.html
@@ -68,6 +68,10 @@
                 <td class="speaker"><a href="http://www.prateekjain.org">Prateek Jain</a> (Google)</td>
             </tr>
             <tr class="speaker">
+                <td class="speaker"><img src="./MLLM2024_speakerlist_files/Preslav_Nakov.jpeg" alt="Speaker 2" class="dispic"></td>
+                <td class="speaker"><a href="https://mbzuai.ac.ae/study/faculty/preslav-nakov/">Preslav Nakov</a> (MBZUAI)</td>
+            </tr>
+            <tr class="speaker">
                 <td class="speaker"><img src="./MLLM2024_speakerlist_files/Karthik_Nandakumar.jpeg" alt="Speaker 2" class="dispic"></td>
                 <td class="speaker"><a href="https://www.cse.msu.edu/~nandakum/">Karthik Nandakumar</a> (Michigan State University / MBZUAI)</td>
             </tr>
