--- a/speakerlist.html
+++ b/speakerlist.html
@@ -114,8 +114,8 @@
             </tr>
 -->
             <tr class="speaker">
-                <td class="speaker"><img src="./MLLM2024_speakerlist_files/Minsu_Kim.jpeg" alt="Speaker 2" class="dispic"></td>
-                <td class="speaker"><a href="https://sites.google.com/view/ms-dot-k">Minsu Kim</a> (Meta)</td>
+                <td class="speaker"><img src="./MLLM2024_speakerlist_files/Minsu_Kim.jpg" alt="Speaker 2" class="dispic"></td>
+                <td class="speaker"><a href="https://minsuukim.github.io">Minsu Kim</a> (Mila - Quebec AI Institute)</td>
             </tr>
             <tr class="speaker">
                 <td class="speaker"><img src="./MLLM2024_speakerlist_files/Aleksandar_Petrov.jpeg" alt="Speaker 2" class="dispic"></td>
