--- a/day2.html
+++ b/day2.html
@@ -254,7 +254,7 @@
         </tr>
         <tr>
             <td class="speaker">
-                <a href="https://en.wikipedia.org/wiki/Tom%C3%A1%C5%A1_Mikolov"><b>Tomas Mikolov</b></a>; <a href="https://mbzuai.ac.ae/study/faculty/professor-eric-xing/"><b>Eric Xing</b></a>; <a href="https://www.cse.msu.edu/~nandakum/"><b>Karthik Nandakumar</b></a>; <a href="https://nouhadziri.github.io/"><b>Nouha Dziri</b></a>
+                Member: <a href="https://en.wikipedia.org/wiki/Tom%C3%A1%C5%A1_Mikolov"><b>Tomas Mikolov</b></a>; <a href="https://mbzuai.ac.ae/study/faculty/professor-eric-xing/"><b>Eric Xing</b></a>; <a href="https://www.cse.msu.edu/~nandakum/"><b>Karthik Nandakumar</b></a>; <a href="https://nouhadziri.github.io/"><b>Nouha Dziri</b></a>
             </td>
         </tr>
        
