--- a/day1.html
+++ b/day1.html
@@ -205,7 +205,7 @@
         </tr>
         <tr>
             <td class="speaker">
-                <a href="https://haolun-wu.github.io/"><b>Haolun Wu</b></a>, (McGill University / Mila)
+                <a href="https://haolun-wu.github.io/"><b>Haolun Wu</b></a>, (Stanford University / Mila)
             </td>
         </tr>
     </tbody></table>
