--- a/speakerlist.html
+++ b/speakerlist.html
@@ -105,7 +105,7 @@
             </tr>
             <tr class="speaker">
                 <td class="speaker"><img src="./MLLM2024_speakerlist_files/Haolun_Wu.jpeg" alt="Speaker 2" class="dispic"></td>
-                <td class="speaker"><a href="https://haolun-wu.github.io/">Haolun Wu</a> (McGill University / Mila)</td>
+                <td class="speaker"><a href="https://haolun-wu.github.io/">Haolun Wu</a> (Stanford University / Mila)</td>
             </tr>
 <!--
             <tr class="speaker">
