--- a/day2.html
+++ b/day2.html
@@ -271,7 +271,8 @@
         </tr>
         <tr>
             <td class="speaker">
-                <a href="https://mbzuai.ac.ae/study/faculty/timothy-baldwin/"><b>Timothy Baldwin</b></a>, (MBZUAI)
+                <a href="https://mbzuai.ac.ae/study/faculty/professor-eric-xing/"><b>Eric Xing</b></a>, (MBZUAI)
+               
             </td>
         </tr>
     </tbody></table>
