--- a/day1.html
+++ b/day1.html
@@ -91,6 +91,27 @@
             </td>        
             </tr>
     </tbody></table>
+
+    <table id="Gus Xia">
+        <tbody><tr>
+            <td class="date" rowspan="3">
+             9:30am
+            </td>
+            <td class="title">
+                A Musical View on Multimodal Large Language Models: Hierarchical Modeling, Control, and AI Partnerships
+            </td>
+        </tr>
+        <tr>
+            <td class="speaker">
+                <a href="https://mbzuai.ac.ae/study/faculty/dr-gus-xia/"><b>Gus Xia</b></a> (MBZUAI)
+            </td>
+        </tr>
+        <tr>
+            <td class="abstract">
+                In this presentation, Gus will delve into three pioneering studies focused on developing multimodal language models for music AI. Firstly, he will discuss whole-song generation through cascaded diffusion modeling, which integrates hierarchical music language structures into diffusion models for enhanced sample-efficient learning. Secondly, he will introduce "coco-mulla," the inaugural "controlnet" fashion model that adeptly applies content-based controls to large-scale audio generation tasks. Lastly, Gus will present Flute X GPT, which introduces LAUI (LLM-Agent User Interface) as a potential next-generation Human-Computer Interaction (HCI) paradigm after Graphical User Interface (GUI). This system capitalizes on a nuanced understanding of both users and tutorial software to innovate customized music-learning experiences.
+        </td></tr>
+    </tbody></table>
+
     
      <table>
         <tbody><tr>
